--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
     "name": "svelte-filerouter",
     "version": "1.3.0",
     "description": "",
-    "main": "src/index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "svelte": "src/components.js",
+    "main": "lib/index.js",
+    "svelte": "src/index.js",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/jakobrosenberg/svelte-filerouter.git"
@@ -19,5 +16,8 @@
     "homepage": "https://github.com/jakobrosenberg/svelte-filerouter#readme",
     "devDependencies": {
         "rollup-pluginutils": "^2.8.2"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
