Revert "Revert "oops""
This reverts commit 7376bb605897880e70b8852ab15d91c591f69f3e.

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "cheap-watch": "^1.0.2"
     }
 }
